--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "figlet": "^1.5.0",
     "fs-extra": "^9.0.1",
     "nanoid": "^3.1.20",
+    "open": "^7.3.1",
     "ora": "^5.2.0",
     "terminal-link": "^2.1.1"
   }
