--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "dot-prop": "^6.0.1",
     "enquirer": "^2.3.6",
     "figlet": "^1.5.0",
-    "fs-extra": "^9.0.1",
+    "form-data": "^3.0.0",
+    "fs-extra": "^9.1.0",
+    "get-uri": "^3.0.2",
     "nanoid": "^3.1.20",
     "open": "^7.3.1",
-    "ora": "^5.2.0",
+    "ora": "^5.3.0",
     "terminal-link": "^2.1.1"
   }
 }
