--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cli-table3": "^0.6.0",
     "data-store": "^4.0.3",
     "figlet": "^1.5.0",
+    "form-data": "^3.0.0",
     "fs-extra": "^9.1.0",
     "get-uri": "^3.0.2",
     "open": "^7.4.0",
