--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "chalk": "^4.1.0",
     "cli-table3": "^0.6.0",
     "data-store": "^4.0.3",
+    "express": "^4.17.1",
     "figlet": "^1.5.0",
     "form-data": "^3.0.0",
     "fs-extra": "^9.1.0",
     "get-uri": "^3.0.2",
+    "mime-types": "^2.1.28",
+    "nanoid": "^3.1.20",
     "open": "^7.4.0",
     "ora": "^5.3.0",
     "readcommand": "^0.3.0",
