reinit: rewrite cli to be more modular
- add pwd, cd, ls, cat, cp, rm, switch drive, create drive and help command
- add util methods
- add main client: setup function, parse and execute commands
- add base provider client
- add hard_drive and google_drive client
- add README, LICENSE, docs folder, media and .gitignore

--- a/src/config/sample_dabbu_cli_config.json
+++ b/src/config/sample_dabbu_cli_config.json
@@ -1,12 +1,21 @@
 {
-  "server_address": "http://localhost:8080",
-  "current_provider_id": "hard_drive",
-  "current_instance_id": "hd",
-  "instances": {
-    "hd": {
-      "provider_id": "hard_drive",
-      "base_path": "/home/user",
-      "current_path": "/Test"
+  "server": "http://localhost:8080",
+  "current_drive": "c",
+  "drives": {
+    "c": {
+      "provider": "hard_drive",
+      "path": "/dabbu-cli",
+      "base_path": "/home/user/code"
+    },
+    "d": {
+      "provider": "hard_drive",
+      "path": "",
+      "base_path": "/home/user/Documents"
     }
-  }
+  },
+  "setup_done": true,
+  "history": [
+    "ls",
+    "cd .."
+  ]
 }
