--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dabbu-cli",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "clear && node src/index.js"
@@ -22,15 +22,16 @@
     "chalk": "^4.1.0",
     "cli-table3": "^0.6.0",
     "data-store": "^4.0.3",
-    "dot-prop": "^6.0.1",
-    "enquirer": "^2.3.6",
+    "express": "^4.17.1",
     "figlet": "^1.5.0",
     "form-data": "^3.0.0",
     "fs-extra": "^9.1.0",
     "get-uri": "^3.0.2",
+    "mime-types": "^2.1.28",
     "nanoid": "^3.1.20",
-    "open": "^7.3.1",
+    "open": "^7.4.0",
     "ora": "^5.3.0",
+    "readcommand": "^0.3.0",
     "terminal-link": "^2.1.1"
   }
 }
