--- a/src/config/sample_dabbu_cli_config.json
+++ b/src/config/sample_dabbu_cli_config.json
@@ -17,5 +17,14 @@
   "history": [
     "ls",
     "cd .."
-  ]
+  ],
+  "clips": {
+    "default": {
+      "files": {
+        "..."
+      },
+      "drive": "c",
+      "path": "/dabbu-server"
+    }
+  }
 }
