--- a/src/provider_config.json
+++ b/src/provider_config.json
@@ -27,7 +27,7 @@
       "request": {
         "body": null,
         "headers": {
-          "authorization": {
+          "Authorization": {
             "user_input_needed": false,
             "description": "The access token retrieved from OAuth servers upon user consent",
             "type": "string",
@@ -48,7 +48,7 @@
       "request": {
         "body": null,
         "headers": {
-          "authorization": {
+          "Authorization": {
             "user_input_needed": false,
             "description": "The access token retrieved from OAuth servers upon user consent",
             "type": "string",
@@ -69,7 +69,7 @@
       "request": {
         "body": null,
         "headers": {
-          "authorization": {
+          "Authorization": {
             "user_input_needed": false,
             "description": "The access token retrieved from OAuth servers upon user consent",
             "type": "string",
