--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "clear && node src/index.js",
-    "clean": "rm -r dist && mkdir dist",
+    "start": "clear; node src/index.js",
+    "clean": "rm -r dist; mkdir dist",
     "prebuild": "npm run clean",
     "build": "pkg --output dist/dabbu-cli .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\"; exit 1"
   },
   "repository": {
     "type": "git",
