--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "terminal-link": "^2.1.1"
   },
   "devDependencies": {
+    "pkg": "^4.4.9",
     "prettier": "2.2.1"
   },
   "bin": "src/index.js",
