--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dabbu-cli",
-  "version": "2.3.0-beta2",
+  "version": "2.3.1",
   "description": "A CLI that leverages the Dabbu API and neatly retrieves your files and folders scattered online",
   "main": "src/index.js",
   "directories": {
