--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@types/chalk": "^2.2.0",
 		"@types/env-paths": "^2.1.0",
 		"@types/figlet": "^1.5.0",
+		"@types/jest": "^26.0.23",
 		"@types/node": "^14.14.41",
 		"@types/ora": "^3.2.0",
 		"@types/terminal-link": "^1.2.0",
