feat(logs): add logging for cd, clear commands and ui functions
- change name of artifact produced by ci: Files API Server Executable => CLI Executable

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,5 +33,5 @@ jobs:
       - name: Uploading built executables
         uses: actions/upload-artifact@v2
         with:
-          name: Files API Server Executables
+          name: Dabbu CLI Executables
           path: execs/*
