--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
 		"enquirer": "^2.3.6",
 		"env-paths": "^2.2.1",
 		"figlet": "^1.5.0",
+		"fs-extra": "^10.0.0",
 		"nanoid": "^3.1.22",
+		"open": "^8.0.7",
 		"ora": "^5.4.0",
 		"readcommand": "0.3.0",
 		"terminal-link": "2.1.1",
@@ -38,8 +40,10 @@
 		"@types/chalk": "^2.2.0",
 		"@types/env-paths": "^2.1.0",
 		"@types/figlet": "^1.5.0",
+		"@types/fs-extra": "^9.0.11",
 		"@types/jest": "^26.0.23",
 		"@types/node": "^14.14.41",
+		"@types/open": "^6.2.1",
 		"@types/ora": "^3.2.0",
 		"@types/terminal-link": "^1.2.0",
 		"@types/winston": "^2.4.4",
