--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "cli",
-	"version": "3.2.0",
+	"version": "3.3.0-beta.0",
 	"main": "dist/compiled/index.js",
 	"bin": "dist/compiled/index.js",
 	"repository": "https://github.com/dabbu-knowledge-platform/cli",
